--- a/updateRidge2.ipynb
+++ b/updateRidge2.ipynb
@@ -52,7 +52,10 @@
      "text": [
       "32\n",
       "[array([0, 2]), array([1, 3])]\n",
-      "[array([1, 3]), array([0, 2])]\n"
+      "[array([1, 3]), array([0, 2])]\n",
+      "lambda: 0\n",
+      "thresh: 0\n",
+      "here"
      ]
     }
    ],
@@ -126,10 +129,10 @@
     "        for train,test in zip(trains,tests):\n",
     "            print('here')\n",
     "            \n",
-    "            im_tr=np.asarray([np.ravel(ims[625*idx:625*(idx+1)+(625*n)*k]).tolist() for idx in train for k in np.arange(0,8)][0])\n",
-    "            im_te=np.asarray([np.ravel(ims[625*idx:625*(idx+1)]).tolist() for idx in test][0])\n",
-    "            gt_tr=np.asarray([np.ravel(ims[625*idx:625*(idx+1)+(625*n)*k]).tolist() for idx in train for k in np.arange(0,8)][0])\n",
-    "            gt_te=np.asarray([np.ravel(gt_ims[625*idx:625*(idx+1)]).tolist() for idx in test][0])\n",
+    "            im_tr=np.asarray([np.ravel(ims[625*idx:625*(idx+1)+(625*n)*k]).tolist() for idx in train for k in np.arange(0,8)][0]).reshape(1,-1)\n",
+    "            im_te=np.asarray([np.ravel(ims[625*idx:625*(idx+1)]).tolist() for idx in test][0]).reshape(1,-1)\n",
+    "            gt_tr=np.asarray([np.ravel(ims[625*idx:625*(idx+1)+(625*n)*k]).tolist() for idx in train for k in np.arange(0,8)][0]).reshape(1,-1)\n",
+    "            gt_te=np.asarray([np.ravel(gt_ims[625*idx:625*(idx+1)]).tolist() for idx in test][0]).reshape(1,-1)\n",
     "            \n",
     "            ridgereg = linear_model.Ridge(alpha=lam, normalize=True)\n",
     "            ridgereg.fit(im_tr, gt_tr)\n",
