--- a/updateRidge2.ipynb
+++ b/updateRidge2.ipynb
@@ -25,10 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def post_processing(label,threshold,size_min,verbarg,horbarg,size_image):\n",
@@ -43,8 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -55,7 +55,52 @@
       "[array([1, 3]), array([0, 2])]\n",
       "lambda: 0\n",
       "thresh: 0\n",
-      "here"
+      "here\n",
+      "0.8635682158920539\n",
+      "here\n",
+      "0.8705882352941177\n",
+      "thresh: 1\n",
+      "here\n",
+      "0.6836363636363637\n",
+      "here\n",
+      "0.726950354609929\n",
+      "thresh: 2\n",
+      "here\n",
+      "0.5256410256410257\n",
+      "here\n",
+      "0.6551724137931034\n",
+      "lambda: 1\n",
+      "thresh: 0\n",
+      "here\n",
+      "0.8700906344410876\n",
+      "here\n",
+      "0.8774583963691377\n",
+      "thresh: 1\n",
+      "here\n",
+      "0.6775956284153005\n",
+      "here\n",
+      "0.7129798903107861\n",
+      "thresh: 2\n",
+      "here\n",
+      "0.5161290322580645\n",
+      "here\n",
+      "0.6589595375722542\n",
+      "lambda: 2\n",
+      "thresh: 0\n",
+      "here\n",
+      "0.8648648648648649\n",
+      "here\n",
+      "0.878698224852071\n",
+      "thresh: 1\n",
+      "here\n",
+      "0.6715596330275229\n",
+      "here\n",
+      "0.7145421903052065\n",
+      "thresh: 2\n",
+      "here\n",
+      "0.49327354260089684\n",
+      "here\n",
+      "0.6589595375722542\n"
      ]
     }
    ],
@@ -70,8 +115,8 @@
     "gt_dir = root_dir + \"groundtruth/\"\n",
     "files = os.listdir(image_dir)\n",
     "\n",
-    "#n=len(files)\n",
-    "n=4\n",
+    "n=len(files)\n",
+    "#n=4\n",
     "k_fold=2 #number of folds in the k-fold cross-validation\n",
     "\n",
     "ims = [load_image(image_dir + files[i]) for i in range(n)]\n",
@@ -128,12 +173,25 @@
     "        #for (train_id,test_id) in splits:\n",
     "        for train,test in zip(trains,tests):\n",
     "            print('here')\n",
+    "            im_tr = np.zeros((len(train)*625*8,325))\n",
+    "            gt_tr = np.zeros((len(train)*625*8))\n",
+    "            inter = 0\n",
+    "            for idx in train:\n",
+    "                temps = [ims[625*idx + (625*n)*k: 625*(idx+1) + (625*n)*k] for k in np.arange(0,8)]\n",
+    "                gt_temps = [gt_ims[625*idx + (625*n)*k :625*(idx+1) + (625*n)*k] for k in np.arange(0,8)]\n",
+    "                for (temp,gt_temp) in zip(temps,gt_temps):\n",
+    "                    im_tr[625*inter:625*(inter+1),:]= temp\n",
+    "                    gt_tr[625*inter:625*(inter+1)]=gt_temp\n",
+    "                    inter = inter + 1\n",
     "            \n",
-    "            im_tr=np.asarray([np.ravel(ims[625*idx:625*(idx+1)+(625*n)*k]).tolist() for idx in train for k in np.arange(0,8)][0]).reshape(1,-1)\n",
-    "            im_te=np.asarray([np.ravel(ims[625*idx:625*(idx+1)]).tolist() for idx in test][0]).reshape(1,-1)\n",
-    "            gt_tr=np.asarray([np.ravel(ims[625*idx:625*(idx+1)+(625*n)*k]).tolist() for idx in train for k in np.arange(0,8)][0]).reshape(1,-1)\n",
-    "            gt_te=np.asarray([np.ravel(gt_ims[625*idx:625*(idx+1)]).tolist() for idx in test][0]).reshape(1,-1)\n",
-    "            \n",
+    "            im_te = np.zeros((len(train)*625,325))\n",
+    "            gt_te = np.zeros((len(train)*625))\n",
+    "            inter = 0\n",
+    "            for idx in test:\n",
+    "                im_te[625*inter:625*(inter+1),:] = ims[625*idx : 625*(idx+1)]\n",
+    "                gt_te[625*inter:625*(inter+1)] = gt_ims[625*idx : 625*(idx+1)]\n",
+    "                inter = inter + 1\n",
+    "           \n",
     "            ridgereg = linear_model.Ridge(alpha=lam, normalize=True)\n",
     "            ridgereg.fit(im_tr, gt_tr)\n",
     "\n",
@@ -157,9 +215,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(625, 325)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ims[625*idx : 625*(idx+1) + (625*n)*k] for k in np.arange(0,8)][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[array([[1.00000000e+00, 2.01731011e-01, 1.99249394e-01, ...,\n",
+       "        5.59237256e-09, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.00000000e+00, 1.94270838e-01, 2.17922799e-01, ...,\n",
+       "        6.98176668e-09, 8.71606791e-07, 1.08811771e-04],\n",
+       "       [1.00000000e+00, 3.18887874e-01, 3.35677090e-01, ...,\n",
+       "        9.51435157e-08, 2.65303282e-05, 7.39785898e-03],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 3.17432607e-01, 3.09451602e-01, ...,\n",
+       "        2.33870514e-08, 1.30762938e-05, 7.31128760e-03],\n",
+       "       [1.00000000e+00, 1.97947309e-01, 2.38204663e-01, ...,\n",
+       "        1.56268795e-08, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.00000000e+00, 2.93321086e-01, 2.96185669e-01, ...,\n",
+       "        3.23195296e-08, 1.51082533e-05, 7.06258171e-03]]),\n",
+       "        array([[1.00000000e+00, 2.01731011e-01, 1.99249394e-01, ...,\n",
+       "        5.59237256e-09, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.00000000e+00, 1.94270838e-01, 2.17922799e-01, ...,\n",
+       "        6.98176668e-09, 8.71606791e-07, 1.08811771e-04],\n",
+       "       [1.00000000e+00, 3.18887874e-01, 3.35677090e-01, ...,\n",
+       "        9.51435157e-08, 2.65303282e-05, 7.39785898e-03],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 3.08379296e-01, 2.97288610e-01, ...,\n",
+       "        7.89387476e-08, 2.26899011e-05, 6.52191261e-03],\n",
+       "       [1.00000000e+00, 3.31556377e-01, 2.98207727e-01, ...,\n",
+       "        5.46922449e-08, 1.98688910e-05, 7.21807692e-03],\n",
+       "       [1.00000000e+00, 3.05499391e-01, 2.63710177e-01, ...,\n",
+       "        1.01714646e-08, 1.05203378e-06, 1.08811771e-04]]),\n",
+       "        array([[1.00000000e+000, 2.01731011e-001, 1.99249394e-001, ...,\n",
+       "        5.59237256e-009, 0.00000000e+000, 0.00000000e+000],\n",
+       "       [1.00000000e+000, 1.94270838e-001, 2.17922799e-001, ...,\n",
+       "        6.98176668e-009, 8.71606791e-007, 1.08811771e-004],\n",
+       "       [1.00000000e+000, 3.18887874e-001, 3.35677090e-001, ...,\n",
+       "        9.51435157e-008, 2.65303282e-005, 7.39785898e-003],\n",
+       "       ...,\n",
+       "       [1.00000000e+000, 1.91406255e-001, 2.30729172e-001, ...,\n",
+       "        1.45462723e-008, 2.25302021e-071, 3.48962259e-134],\n",
+       "       [1.00000000e+000, 2.02496942e-001, 2.23621329e-001, ...,\n",
+       "        3.54791768e-008, 1.75694180e-089, 8.70043995e-171],\n",
+       "       [1.00000000e+000, 1.62285543e-001, 2.12484687e-001, ...,\n",
+       "        4.57977004e-009, 7.13498365e-100, 1.11158401e-190]]),\n",
+       "        array([[1.00000000e+00, 2.01731011e-01, 1.99249394e-01, ...,\n",
+       "        5.59237256e-09, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.00000000e+00, 1.94270838e-01, 2.17922799e-01, ...,\n",
+       "        6.98176668e-09, 8.71606791e-07, 1.08811771e-04],\n",
+       "       [1.00000000e+00, 3.18887874e-01, 3.35677090e-01, ...,\n",
+       "        9.51435157e-08, 2.65303282e-05, 7.39785898e-03],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 3.41467536e-01, 3.03170963e-01, ...,\n",
+       "        2.94391473e-09, 3.11174510e-06, 3.28914335e-03],\n",
+       "       [1.00000000e+00, 3.32552091e-01, 3.00750617e-01, ...,\n",
+       "        4.02956927e-09, 4.66687257e-06, 5.40496964e-03],\n",
+       "       [1.00000000e+00, 2.88817410e-01, 2.72549026e-01, ...,\n",
+       "        1.15361481e-08, 9.02634967e-06, 7.06258171e-03]]),\n",
+       "        array([[1.00000000e+00, 2.01731011e-01, 1.99249394e-01, ...,\n",
+       "        5.59237256e-09, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.00000000e+00, 1.94270838e-01, 2.17922799e-01, ...,\n",
+       "        6.98176668e-09, 8.71606791e-07, 1.08811771e-04],\n",
+       "       [1.00000000e+00, 3.18887874e-01, 3.35677090e-01, ...,\n",
+       "        9.51435157e-08, 2.65303282e-05, 7.39785898e-03],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 2.93795967e-01, 2.27190568e-01, ...,\n",
+       "        1.30107718e-09, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.00000000e+00, 2.39705888e-01, 2.10753683e-01, ...,\n",
+       "        2.29614954e-08, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.00000000e+00, 3.05499391e-01, 2.63710177e-01, ...,\n",
+       "        1.01714646e-08, 1.05203378e-06, 1.08811771e-04]]),\n",
+       "        array([[1.00000000e+00, 2.01731011e-01, 1.99249394e-01, ...,\n",
+       "        5.59237256e-09, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.00000000e+00, 1.94270838e-01, 2.17922799e-01, ...,\n",
+       "        6.98176668e-09, 8.71606791e-07, 1.08811771e-04],\n",
+       "       [1.00000000e+00, 3.18887874e-01, 3.35677090e-01, ...,\n",
+       "        9.51435157e-08, 2.65303282e-05, 7.39785898e-03],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 2.85355401e-01, 2.97886040e-01, ...,\n",
+       "        2.50916346e-08, 7.19572391e-06, 2.06357391e-03],\n",
+       "       [1.00000000e+00, 2.35217531e-01, 2.56724885e-01, ...,\n",
+       "        1.22146213e-08, 8.64345460e-43, 6.11638343e-77],\n",
+       "       [1.00000000e+00, 2.01731011e-01, 1.99249394e-01, ...,\n",
+       "        5.59237256e-09, 9.42822350e-42, 1.58951138e-74]]),\n",
+       "        array([[1.00000000e+00, 2.01731011e-01, 1.99249394e-01, ...,\n",
+       "        5.59237256e-09, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.00000000e+00, 1.94270838e-01, 2.17922799e-01, ...,\n",
+       "        6.98176668e-09, 8.71606791e-07, 1.08811771e-04],\n",
+       "       [1.00000000e+00, 3.18887874e-01, 3.35677090e-01, ...,\n",
+       "        9.51435157e-08, 2.65303282e-05, 7.39785898e-03],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 2.53216919e-01, 2.48437507e-01, ...,\n",
+       "        9.35182264e-10, 2.01652922e-52, 4.34823270e-95],\n",
+       "       [1.00000000e+00, 2.26378683e-01, 2.35523904e-01, ...,\n",
+       "        2.37395212e-09, 1.67792899e-40, 1.18597408e-71],\n",
+       "       [1.00000000e+00, 3.15349272e-01, 3.19730401e-01, ...,\n",
+       "        5.46742546e-08, 1.37691056e-05, 3.46759676e-03]]),\n",
+       "        array([[1.00000000e+00, 2.01731011e-01, 1.99249394e-01, ...,\n",
+       "        5.59237256e-09, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.00000000e+00, 1.94270838e-01, 2.17922799e-01, ...,\n",
+       "        6.98176668e-09, 8.71606791e-07, 1.08811771e-04],\n",
+       "       [1.00000000e+00, 3.18887874e-01, 3.35677090e-01, ...,\n",
+       "        9.51435157e-08, 2.65303282e-05, 7.39785898e-03],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 2.12469369e-01, 2.14843757e-01, ...,\n",
+       "        6.79972091e-08, 8.31031985e-44, 1.01565074e-79],\n",
+       "       [1.00000000e+00, 2.02068023e-01, 1.85968144e-01, ...,\n",
+       "        8.22351186e-08, 2.59759329e-49, 8.20512093e-91],\n",
+       "       [1.00000000e+00, 2.15548414e-01, 2.03553928e-01, ...,\n",
+       "        6.06251211e-08, 1.94184178e-06, 6.21978055e-05]]),\n",
+       "        array([[1.00000000e+00, 3.56372555e-01, 3.39506747e-01, ...,\n",
+       "        8.71771624e-09, 7.17703409e-06, 5.90863672e-03],\n",
+       "       [1.00000000e+00, 3.69332114e-01, 3.50214468e-01, ...,\n",
+       "        6.44605291e-09, 3.79407812e-06, 2.23315399e-03],\n",
+       "       [1.00000000e+00, 3.63572311e-01, 3.46982238e-01, ...,\n",
+       "        6.83067661e-10, 6.78133644e-07, 6.73235266e-04],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 2.07015938e-01, 2.03630521e-01, ...,\n",
+       "        3.01512491e-08, 4.63780664e-07, 7.13378421e-06],\n",
+       "       [1.00000000e+00, 4.02313124e-01, 3.80009204e-01, ...,\n",
+       "        8.91249750e-08, 2.45724836e-05, 6.77483446e-03],\n",
+       "       [1.00000000e+00, 2.15548414e-01, 2.03553928e-01, ...,\n",
+       "        6.06251211e-08, 1.94184178e-06, 6.21978055e-05]]),\n",
+       "        array([[1.00000000e+00, 3.56372555e-01, 3.39506747e-01, ...,\n",
+       "        8.71771624e-09, 7.17703409e-06, 5.90863672e-03],\n",
+       "       [1.00000000e+00, 3.69332114e-01, 3.50214468e-01, ...,\n",
+       "        6.44605291e-09, 3.79407812e-06, 2.23315399e-03],\n",
+       "       [1.00000000e+00, 3.63572311e-01, 3.46982238e-01, ...,\n",
+       "        6.83067661e-10, 6.78133644e-07, 6.73235266e-04],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 2.31295962e-01, 2.41498167e-01, ...,\n",
+       "        9.55586694e-08, 1.03758622e-05, 1.12662219e-03],\n",
+       "       [1.00000000e+00, 2.26041673e-01, 2.27588854e-01, ...,\n",
+       "        1.15839774e-07, 2.05503066e-05, 3.64568307e-03],\n",
+       "       [1.00000000e+00, 3.24892781e-01, 3.23943027e-01, ...,\n",
+       "        3.16673315e-08, 1.41831455e-05, 6.35233875e-03]]),\n",
+       "        array([[1.00000000e+00, 3.56372555e-01, 3.39506747e-01, ...,\n",
+       "        8.71771624e-09, 7.17703409e-06, 5.90863672e-03],\n",
+       "       [1.00000000e+00, 3.69332114e-01, 3.50214468e-01, ...,\n",
+       "        6.44605291e-09, 3.79407812e-06, 2.23315399e-03],\n",
+       "       [1.00000000e+00, 3.63572311e-01, 3.46982238e-01, ...,\n",
+       "        6.83067661e-10, 6.78133644e-07, 6.73235266e-04],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 2.22503070e-01, 2.22043511e-01, ...,\n",
+       "        7.54772303e-10, 1.76534635e-43, 4.12899058e-77],\n",
+       "       [1.00000000e+00, 2.10677088e-01, 2.08777578e-01, ...,\n",
+       "        8.90670354e-11, 4.88471128e-54, 2.67892651e-97],\n",
+       "       [1.00000000e+00, 2.95833341e-01, 2.86427704e-01, ...,\n",
+       "        5.87576284e-09, 1.63747706e-06, 4.56337531e-04]]),\n",
+       "        array([[1.00000000e+000, 3.56372555e-001, 3.39506747e-001, ...,\n",
+       "        8.71771624e-009, 7.17703409e-006, 5.90863672e-003],\n",
+       "       [1.00000000e+000, 3.69332114e-001, 3.50214468e-001, ...,\n",
+       "        6.44605291e-009, 3.79407812e-006, 2.23315399e-003],\n",
+       "       [1.00000000e+000, 3.63572311e-001, 3.46982238e-001, ...,\n",
+       "        6.83067661e-010, 6.78133644e-007, 6.73235266e-004],\n",
+       "       ...,\n",
+       "       [1.00000000e+000, 2.84237143e-001, 2.74157485e-001, ...,\n",
+       "        2.05863703e-008, 1.94816204e-059, 1.84361560e-110],\n",
+       "       [1.00000000e+000, 2.09604786e-001, 2.09329050e-001, ...,\n",
+       "        5.68596230e-009, 5.07207466e-078, 4.52446569e-147],\n",
+       "       [1.00000000e+000, 1.97212016e-001, 1.81878069e-001, ...,\n",
+       "        3.32866591e-009, 4.39371364e-088, 5.79953651e-167]]),\n",
+       "        array([[1.00000000e+00, 3.56372555e-01, 3.39506747e-01, ...,\n",
+       "        8.71771624e-09, 7.17703409e-06, 5.90863672e-03],\n",
+       "       [1.00000000e+00, 3.69332114e-01, 3.50214468e-01, ...,\n",
+       "        6.44605291e-09, 3.79407812e-06, 2.23315399e-03],\n",
+       "       [1.00000000e+00, 3.63572311e-01, 3.46982238e-01, ...,\n",
+       "        6.83067661e-10, 6.78133644e-07, 6.73235266e-04],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 2.54794739e-01, 2.46369493e-01, ...,\n",
+       "        4.12203300e-10, 0.00000000e+00, 0.00000000e+00],\n",
+       "       [1.00000000e+00, 2.81403196e-01, 2.74188122e-01, ...,\n",
+       "        9.17323073e-10, 5.03045254e-07, 2.75861946e-04],\n",
+       "       [1.00000000e+00, 2.95833341e-01, 2.86427704e-01, ...,\n",
+       "        5.87576284e-09, 1.63747706e-06, 4.56337531e-04]]),\n",
+       "        array([[1.00000000e+00, 3.56372555e-01, 3.39506747e-01, ...,\n",
+       "        8.71771624e-09, 7.17703409e-06, 5.90863672e-03],\n",
+       "       [1.00000000e+00, 3.69332114e-01, 3.50214468e-01, ...,\n",
+       "        6.44605291e-09, 3.79407812e-06, 2.23315399e-03],\n",
+       "       [1.00000000e+00, 3.63572311e-01, 3.46982238e-01, ...,\n",
+       "        6.83067661e-10, 6.78133644e-07, 6.73235266e-04],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 4.15318638e-01, 4.08946089e-01, ...,\n",
+       "        3.90905161e-08, 4.45329471e-06, 5.07331079e-04],\n",
+       "       [1.00000000e+00, 3.62224272e-01, 3.63526355e-01, ...,\n",
+       "        4.45114845e-08, 1.40465257e-05, 4.43267364e-03],\n",
+       "       [1.00000000e+00, 2.93321086e-01, 2.96185669e-01, ...,\n",
+       "        3.23195296e-08, 1.51082533e-05, 7.06258171e-03]]),\n",
+       "        array([[1.00000000e+00, 3.56372555e-01, 3.39506747e-01, ...,\n",
+       "        8.71771624e-09, 7.17703409e-06, 5.90863672e-03],\n",
+       "       [1.00000000e+00, 3.69332114e-01, 3.50214468e-01, ...,\n",
+       "        6.44605291e-09, 3.79407812e-06, 2.23315399e-03],\n",
+       "       [1.00000000e+00, 3.63572311e-01, 3.46982238e-01, ...,\n",
+       "        6.83067661e-10, 6.78133644e-07, 6.73235266e-04],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 2.98161774e-01, 2.96262264e-01, ...,\n",
+       "        9.08995133e-08, 1.35508931e-53, 2.02010657e-99],\n",
+       "       [1.00000000e+00, 2.37653194e-01, 2.28753070e-01, ...,\n",
+       "        9.00726764e-11, 1.95685201e-44, 4.25131123e-78],\n",
+       "       [1.00000000e+00, 3.56372555e-01, 3.39506747e-01, ...,\n",
+       "        8.71771624e-09, 7.17703409e-06, 5.90863672e-03]]),\n",
+       "        array([[1.00000000e+00, 3.56372555e-01, 3.39506747e-01, ...,\n",
+       "        8.71771624e-09, 7.17703409e-06, 5.90863672e-03],\n",
+       "       [1.00000000e+00, 3.69332114e-01, 3.50214468e-01, ...,\n",
+       "        6.44605291e-09, 3.79407812e-06, 2.23315399e-03],\n",
+       "       [1.00000000e+00, 3.63572311e-01, 3.46982238e-01, ...,\n",
+       "        6.83067661e-10, 6.78133644e-07, 6.73235266e-04],\n",
+       "       ...,\n",
+       "       [1.00000000e+00, 4.18780644e-01, 3.98177090e-01, ...,\n",
+       "        9.44292223e-09, 1.96191733e-06, 4.07619538e-04],\n",
+       "       [1.00000000e+00, 4.19316795e-01, 4.00903806e-01, ...,\n",
+       "        2.10860521e-08, 3.43792071e-06, 5.60526872e-04],\n",
+       "       [1.00000000e+00, 4.18857237e-01, 4.02267164e-01, ...,\n",
+       "        2.16341573e-08, 5.39399421e-06, 1.34487205e-03]])]], dtype=object)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "im_tr"
    ]
@@ -176,9 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "thres=np.linspace(0.3,0.8,11)"
@@ -271,9 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -294,7 +588,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
