--- a/updateLogit.ipynb
+++ b/updateLogit.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.image as mpimg\n",
@@ -28,9 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def post_processing(label,threshold,size_min,verbarg,horbarg,size_image):\n",
@@ -45,32 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([0, 1]), array([2, 3])]\n",
-      "[array([2, 3]), array([0, 1])]\n",
-      "32\n",
-      "lambda: 0\n",
-      "here\n",
-      "[0 1]\n",
-      "[2 3]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'im_patches_tr' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-52172f04de92>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     70\u001b[0m                           for j in range(len(gt_te[i]))])\n\u001b[1;32m     71\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m         \u001b[0mim_tr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mextract_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim_patches_tr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim_tr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m         \u001b[0mim_te\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mextract_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim_patches_te\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim_te\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-52172f04de92>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     70\u001b[0m                           for j in range(len(gt_te[i]))])\n\u001b[1;32m     71\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m         \u001b[0mim_tr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mextract_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim_patches_tr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim_tr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     73\u001b[0m         \u001b[0mim_te\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mextract_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim_patches_te\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mim_te\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'im_patches_tr' is not defined"
+      "[array([ 0,  1,  4,  5,  6,  7,  8,  9, 10, 11, 12, 14, 15, 16, 18, 20, 25,\n",
+      "       28, 30, 33, 34, 37, 43, 44, 47]), array([ 2,  3, 13, 17, 19, 21, 22, 23, 24, 26, 27, 29, 31, 32, 35, 36, 38,\n",
+      "       39, 40, 41, 42, 45, 46, 48, 49])]\n",
+      "[array([ 2,  3, 13, 17, 19, 21, 22, 23, 24, 26, 27, 29, 31, 32, 35, 36, 38,\n",
+      "       39, 40, 41, 42, 45, 46, 48, 49]), array([ 0,  1,  4,  5,  6,  7,  8,  9, 10, 11, 12, 14, 15, 16, 18, 20, 25,\n",
+      "       28, 30, 33, 34, 37, 43, 44, 47])]\n"
      ]
     }
    ],
@@ -78,15 +61,14 @@
     "# Settings\n",
     "foreground_threshold = 0.25 # percentage of pixels > 1 required to assign a foreground label to a patch\n",
     "patch_size = 16 # each patch is 16*16 pixels\n",
-    "deg=3\n",
+    "deg=2\n",
     "\n",
     "root_dir = \"training/\"\n",
     "image_dir = root_dir + \"images/\"\n",
     "gt_dir = root_dir + \"groundtruth/\"\n",
     "files = os.listdir(image_dir)\n",
     "\n",
-    "#n=len(files)\n",
-    "n=4\n",
+    "n=int(len(files)/2)\n",
     "k_fold=2 #number of folds in the k-fold cross-validation\n",
     "\n",
     "ims = [load_image(image_dir + files[i]) for i in range(n)]\n",
@@ -116,44 +98,44 @@
     "ims,gt_ims = flip(ims,gt_ims)\n",
     "print(len(ims))\n",
     "\n",
+    "ims = [img_crop(ims[i], patch_size, patch_size) for i in range(len(ims))]\n",
+    "gt_ims = [img_crop(gt_ims[i], patch_size, patch_size) for i in range(len(gt_ims))]\n",
+    "\n",
+    "ims = np.asarray([ims[i][j] \n",
+    "                    for i in range(len(ims)) \n",
+    "                    for j in range(len(ims[i]))])\n",
+    "\n",
+    "gt_ims = np.asarray([gt_ims[i][j] \n",
+    "                    for i in range(len(gt_ims)) \n",
+    "                    for j in range(len(gt_ims[i]))])\n",
+    "\n",
+    "ims=[extract_features(ims[i]) for i in range(len(ims))]\n",
+    "ims = np.asarray([poly_features(ims[i],deg) for i in range(len(ims))])\n",
+    "gt_ims = np.asarray([value_to_class(np.mean(gt_ims[i])) for i in range(len(gt_ims))])\n",
+    "\n",
     "for id_lam,lam in enumerate(lambdas):\n",
     "    print('lambda: '+str(id_lam))\n",
     "    nb_f1_te = np.zeros(k_fold)\n",
     "    for train,test in zip(trains,tests):\n",
     "        print('here')\n",
-    "        print(train)\n",
-    "        print(test)\n",
-    "        im_tr=[ims[idx+n*k] for idx in train for k in np.arange(0,8)]\n",
-    "        im_te=[ims[idx] for idx in test]\n",
-    "        gt_tr=[gt_ims[idx+n*k] for idx in train for k in np.arange(0,8)]\n",
-    "        gt_te=[gt_ims[idx] for idx in test]\n",
-    "        \n",
-    "        im_tr = [img_crop(im_tr[i], patch_size, patch_size) for i in range(len(im_tr))]\n",
-    "        im_te = [img_crop(im_te[i], patch_size, patch_size) for i in range(len(im_te))]\n",
-    "        gt_tr = [img_crop(gt_tr[i], patch_size, patch_size) for i in range(len(gt_tr))]\n",
-    "        gt_te = [img_crop(gt_te[i], patch_size, patch_size) for i in range(len(gt_te))]\n",
-    "        \n",
-    "        im_tr = np.asarray([im_tr[i][j] \n",
-    "                          for i in range(len(im_tr)) \n",
-    "                          for j in range(len(im_tr[i]))])\n",
-    "        im_te = np.asarray([im_te[i][j] \n",
-    "                          for i in range(len(im_te)) \n",
-    "                          for j in range(len(im_te[i]))])\n",
-    "        gt_tr =  np.asarray([gt_tr[i][j] \n",
-    "                          for i in range(len(gt_tr)) \n",
-    "                          for j in range(len(gt_tr[i]))])\n",
-    "        gt_te =  np.asarray([gt_te[i][j] \n",
-    "                          for i in range(len(gt_te)) \n",
-    "                          for j in range(len(gt_te[i]))])\n",
-    "        \n",
-    "        im_tr=[extract_features(im_tr[i]) for i in range(len(im_tr))]\n",
-    "        im_te=[extract_features(im_te[i]) for i in range(len(im_te))]\n",
-    "\n",
-    "        im_tr = np.asarray([poly_features(im_tr[i],deg) for i in range(len(im_tr))])\n",
-    "        gt_tr = np.asarray([value_to_class(np.mean(gt_tr[i])) for i in range(len(gt_tr))])\n",
-    "        \n",
-    "        im_te = np.asarray([poly_features(im_te[i],deg) for i in range(len(im_te))])\n",
-    "        gt_te = np.asarray([value_to_class(np.mean(gt_te[i])) for i in range(len(gt_te))])\n",
+    "        im_tr = np.zeros((len(train)*625*8,325))\n",
+    "        gt_tr = np.zeros((len(train)*625*8))\n",
+    "        inter = 0\n",
+    "        for idx in train:\n",
+    "            temps = [ims[625*idx + (625*n)*k: 625*(idx+1) + (625*n)*k] for k in np.arange(0,8)]\n",
+    "            gt_temps = [gt_ims[625*idx + (625*n)*k :625*(idx+1) + (625*n)*k] for k in np.arange(0,8)]\n",
+    "            for (temp,gt_temp) in zip(temps,gt_temps):\n",
+    "                im_tr[625*inter:625*(inter+1),:]= temp\n",
+    "                gt_tr[625*inter:625*(inter+1)]=gt_temp\n",
+    "                inter = inter + 1\n",
+    "            \n",
+    "        im_te = np.zeros((len(train)*625,325))\n",
+    "        gt_te = np.zeros((len(train)*625))\n",
+    "        inter = 0\n",
+    "        for idx in test:\n",
+    "            im_te[625*inter:625*(inter+1),:] = ims[625*idx : 625*(idx+1)]\n",
+    "            gt_te[625*inter:625*(inter+1)] = gt_ims[625*idx : 625*(idx+1)]\n",
+    "            inter = inter + 1\n",
     "        \n",
     "        logreg = linear_model.LogisticRegression(C=lam, class_weight=\"balanced\")\n",
     "        logreg.fit(im_tr, gt_tr)\n",
@@ -209,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
